--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 clap = "2.33.1"
 reqwest = { version = "0.10.7", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
+lazy_static = "1.4.0"
